# servant-from-scratch-tutorial

./: CHANGELOG.md  Server.hs  servant-from-scratch-tutorial.cabal
app/: .Main.hs.swp  Main.hs
app/dto/: BinarySearchResults.hs  User.hs
