cabal-version:      2.4
name:               servant-from-scratch-tutorial
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Chris Wininger
maintainer:         cwininger@sonatype.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable servant-from-scratch-tutorial
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends: bytestring, base-compat-batteries, lucid, directory, time, http-media, blaze-html, blaze-markup, servant, aeson, mtl, attoparsec, string-conversions, warp, wai, servant-server, base ^>=4.14.0.0
    hs-source-dirs:   app
    default-language: Haskell2010

